# FloodWatcher

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FloodMonitoringData.cpp  FloodMonitoringData.hpp  FloodWarning.cpp  FloodWarning.hpp  GeometryTypes.cpp  GeometryTypes.hpp  HttpClient.cpp  HttpClient.hpp  Measure.cpp  Measure.hpp  README.md  RightPanel.qml  Station.cpp  Station.hpp  StationModel.cpp  StationModel.hpp  conanfile.py  lint.sh  main.cpp  main.qml  qml.qrc
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  codecov.yml  lint.yml  linux-build.yml
include/: FloodMonitoringData.hpp  FloodWarning.hpp  FloodWarningModel.hpp  GeometryTypes.hpp  HttpClient.hpp  HttpClientAdapter.hpp  IHttpClient.hpp  Measure.hpp  MonitoringData.hpp  Station.hpp  StationCluster.hpp  StationModel.hpp  ThreadPool.hpp  TypeUtils.hpp  Warning.hpp  WarningModel.hpp
qml/: MapArea.qml  RightPanel.qml  StationPanel.qml  WarningsPanel.qml  main.qml
src/: FloodMonitoringData.cpp  FloodWarning.cpp  FloodWarningModel.cpp  GeometryTypes.cpp  HttpClient.cpp  Measure.cpp  MonitoringData.cpp  Station.cpp  StationCluster.cpp  StationModel.cpp  TypeUtils.cpp  Warning.cpp  WarningModel.cpp  main.cpp
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt
tests/cpp/mocks/: MockHttpClient.hpp
tests/cpp/unit/: FloodMonitoringDataTest.cpp  FloodWarningTest.cpp  HttpClientTest.cpp  MeasureTest.cpp  MonitoringDataTest.cpp  StationClusterTest.cpp  StationModelTest.cpp  StationTest.cpp  WarningModelTest.cpp  WarningTest.cpp
